--- a/css/estilo.CSS
+++ b/css/estilo.CSS
@@ -1,6 +1,6 @@
 body
 {
 background-color: #00F; /*Azul*/
-font-weight: bold;
-color: #F00; /* Rojo */
+font-style: italic;
+color: rgb(21,255,0); /* Rojo */
 }
